Fixed post section alignment
Fixed spacing and alignment + footer in post.html and post.css

--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,6 @@
 body{
     background-color: #f5fafd;
-    max-width: 1000px;
+
     margin:auto;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -33,6 +33,7 @@ footer{
     background-color: black;
     bottom: 0px;
     padding: 10px;
+    margin-top: 20px;
 }
 
 footer p, footer h1{
@@ -49,7 +50,9 @@ footer p{
     padding: 10px;
     padding: 10px;
     display: block;
-    margin-top: 10px;
+    margin-top: 20px;
+    max-width: 1000px;
+    margin: auto;
 }
 
 
@@ -94,7 +97,8 @@ footer p{
 .column {
     display: flex;
     flex-direction: column;
-    flex: 5 2 20em;
+    flex: 15 2 20em;
+    margin-top: 20px;
   }
 
   .column-1 {
@@ -102,6 +106,7 @@ footer p{
     flex-direction: column;
     flex-basis: 100%;
     flex: 1 1 20em;
+    margin-top: 20px;
   }
 
 .new-comment{
